# rps_game

./: CMakeLists.txt  README.md  main.cpp
dataset/rps_yolo/: data.yaml
test_script/: requirements.txt  test.py  test2.py
